# football_WorldCup_2026_predictions

./: .gitignore  README.md  main.py  pyproject.toml  roadblocks.md  simulation_app.py  steps.md
models/experiments/no_conf_clean/: feature_columns.pkl
notebooks/: 0-data_fetch.ipynb  1-data_cleaning.ipynb  2-feature_engineering.ipynb  4-model_training.ipynb  4b-model_training_experiments.ipynb  5-tournament_simulation.ipynb  5b-tournament_simulation_experiments.ipynb
